# Astrodynamics

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Doxyfile  README.md  SECURITY.md  coverage.info  filtered_coverage.info
IO.Astrodynamics/: Aberrations.cpp  Aberrations.h  CMakeLists.txt  Coordinate.cpp  Coordinate.h  CoordinateSystem.cpp  CoordinateSystem.h  DataPoolMonitoring.cpp  DataPoolMonitoring.h  IlluminationAngle.cpp  IlluminationAngle.h  Macros.h  OccultationType.cpp  OccultationType.h  StringHelpers.h
IO.Astrodynamics.Tests/: APIConvertersTests.cpp  APITests.cpp  AberrationTests.cpp  ApogeeHeightChangingManeuverTests.cpp  ApsidalAlignmentManeuverTests.cpp  AzimuthRangeTests.cpp  BarycenterTests.cpp  BodyTests.cpp  CMakeLists.txt  CelestialBodyTests.cpp  CombinedManeuverTests.cpp  ConicOrbitalElementsTests.cpp  CoordinateSystemTests.cpp  CoordinateTests.cpp  CylindricalTests.cpp  EngineTests.cpp  EphemerisKernelTests.cpp  EquinoctialElementsTests.cpp  ExceptionsTests.cpp  FrameTests.cpp  FuelTankTests.cpp  GeodeticTests.cpp  GravityForceTests.cpp  HelpersTests.cpp  HorizontalCoordinatesTests.cpp  IlluminationTests.cpp  InertialFramesTestscpp.cpp  InstrumentPointToAttitudeTests.cpp  InstrumentTests.cpp  JulianTests.cpp  LagrangePointTests.cpp  LatitudinalTests.cpp  LaunchSiteTests.cpp  LaunchTests.cpp  LaunchWindowTests.cpp  Main.cpp  ManeuverTests.cpp  MatrixTests.cpp  NadirAttitudeTests.cpp  OblatenessPerturbationTests.cpp  (+45 more)
IO.Astrodynamics/API/: Converters.cpp  Proxy.cpp  Proxy.h
IO.Astrodynamics/Body/: Barycenter.cpp  Barycenter.h  Body.cpp  Body.h  CelestialBody.cpp  CelestialBody.h  CelestialItem.cpp  CelestialItem.h  LagrangePoint.cpp  LagrangePoint.h
IO.Astrodynamics/Constraints/: GeometryFinder.cpp  GeometryFinder.h  RelationalOperator.h  RelationnalOperator.cpp
IO.Astrodynamics/Coordinates/: AzimuthRange.cpp  AzimuthRange.h  Cylindrical.h  Equatorial.h  Geodetic.h  HorizontalCoordinates.h  Latitudinal.h  Planetodetic.h  Planetographic.h  Rectangular.h  Spherical.h  SurfaceCoordinates.cpp  SurfaceCoordinates.h  SurfaceInterceptPoint.h
IO.Astrodynamics/Exceptions/: InvalidArgumentException.cpp  InvalidArgumentException.h  PropagatorException.cpp  PropagatorException.h  SDKException.cpp  SDKException.h  TooEarlyManeuverException.cpp  TooEarlyManeuverException.h
IO.Astrodynamics/Frames/: BodyFixedFrame.cpp  BodyFixedFrames.h  FrameFile.cpp  FrameFile.h  Frames.cpp  Frames.h  InertialFrames.cpp  InertialFrames.h  InstrumentFrameFile.cpp  InstrumentFrameFile.h  SiteFrameFile.cpp  SiteFrameFile.h  SpacecraftFrameFile.cpp  SpacecraftFrameFile.h
IO.Astrodynamics/Helpers/: Type.h
IO.Astrodynamics/Illumination/: Illumination.h
IO.Astrodynamics/Instruments/: FOVShapes.cpp  FOVShapes.h  Instrument.cpp  Instrument.h
IO.Astrodynamics/Integrators/: IntegratorBase.cpp  IntegratorBase.h  TLEIntegrator.cpp  TLEIntegrator.h  VVIntegrator.cpp  VVIntegrator.h
IO.Astrodynamics/Kernels/: CircularInstrumentKernel.cpp  CircularInstrumentKernel.h  EllipticalInstrumentKernel.cpp  EllipticalInstrumentKernel.h  EphemerisKernel.cpp  EphemerisKernel.h  InstrumentKernel.cpp  InstrumentKernel.h  Kernel.cpp  Kernel.h  KernelsLoader.cpp  KernelsLoader.h  OrientationKernel.cpp  OrientationKernel.h  RectangularInstrumentKernel.cpp  RectangularInstrumentKernel.h  SpacecraftClockKernel.cpp  SpacecraftClockKernel.h
IO.Astrodynamics/Maneuvers/: ApogeeHeightChangingManeuver.cpp  ApogeeHeightChangingManeuver.h  ApsidalAlignmentManeuver.cpp  ApsidalAlignmentManeuver.h  CombinedManeuver.cpp  CombinedManeuver.h  DynamicFuelTank.h  Launch.cpp  Launch.h  LaunchWindow.cpp  LaunchWindow.h  ManeuverBase.cpp  ManeuverBase.h  ManeuverResult.h  OrbitalPlaneChangingManeuver.cpp  OrbitalPlaneChangingManeuver.h  PerigeeHeightChangingManeuver.cpp  PerigeeHeightChangingManeuver.h  PhasingManeuver.cpp  PhasingManeuver.h
IO.Astrodynamics/Math/: Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Tools.h  Vector3D.cpp  Vector3D.h
IO.Astrodynamics/OrbitalParameters/: ConicOrbitalElements.cpp  ConicOrbitalElements.h  EquinoctialElements.cpp  EquinoctialElements.h  OrbitalParameters.cpp  OrbitalParameters.h  StateOrientation.cpp  StateOrientation.h  StateVector.cpp  StateVector.h  TLE.cpp  TLE.h
IO.Astrodynamics/Parameters/: Constants.h  Parameters.h
IO.Astrodynamics/Propagators/: Propagator.cpp  Propagator.h
IO.Astrodynamics/Scenario/: Scenario.cpp  Scenario.h
IO.Astrodynamics/Sites/: LaunchSite.cpp  LaunchSite.h  Site.cpp  Site.h
IO.Astrodynamics/Spice/: Builder.cpp  Builder.h
IO.SDK/: Aberrations.cpp  Aberrations.h  CMakeLists.txt  Constraint.cpp  Constraint.h  Coordinate.cpp  Coordinate.h  CoordinateSystem.cpp  CoordinateSystem.h  DataPoolMonitoring.cpp  DataPoolMonitoring.h  IlluminationAngle.cpp  IlluminationAngle.h  Macros.h  OccultationType.cpp  OccultationType.h  Scenario.cpp  Scenario.h  StringHelpers.h
IO.SDK.Proxy/: CMakeLists.txt  Proxy.cpp  Proxy.h
IO.SDK.Scenarios/: CMakeLists.txt  Program.cpp
IO.SDK.Tests/: APIConvertersTests.cpp  APITests.cpp  AberrationTests.cpp  ApogeeHeightChangingManeuverTests.cpp  ApsidalAlignmentManeuverTests.cpp  AzimuthRangeTests.cpp  BodyTests.cpp  CMakeLists.txt  CelestialBodyTests.cpp  CentrifugalForceTests.cpp  CombinedManeuverTests.cpp  ConicOrbitalElementsTests.cpp  CoordinateSystemTests.cpp  CoordinateTests.cpp  CylindricalTests.cpp  EngineTests.cpp  EphemerisKernelTests.cpp  EquinoctialElementsTests.cpp  FuelTankTests.cpp  GravityForceTests.cpp  HelpersTests.cpp  IlluminationTests.cpp  InclinationManeuverTests.cpp  InertialFramesTestscpp.cpp  InstrumentPointToAttitudeTests.cpp  InstrumentTests.cpp  LatitudinalTests.cpp  LaunchSiteTests.cpp  LaunchTests.cpp  LaunchWindowTests.cpp  Main.cpp  ManeuverTests.cpp  MatrixTests.cpp  NadirAttitudeTests.cpp  OrientationKernelTests.cpp  PerigeeHeightChangingManeuverTests.cpp  PhasingDuration.cpp  PhasingManeuverTests.cpp  PlaneChangingManeuverTests.cpp  ProgradeAttitudeTests.cpp  (+29 more)
IO.SDK/API/: Proxy.cpp  (+3 more)
(+5207 files in other folders)
